--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,13 @@ sqlparse==0.5.0
 asgiref==3.8.1
 Django==4.0.10
 djangorestframework~=3.13.0
+Django==5.0.6
+djangorestframework==3.15.2
+django-cors-headers==4.4.0
+dj-rest-auth==6.0.0
+django-allauth==0.63.3
+idna==3.7
+urllib3==2.2.2
+certifi==2024.7.4
+charset-normalizer==3.3.2
+requests==2.32.3
