--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,12 @@ urllib3==2.2.2
 certifi==2024.7.4
 charset-normalizer==3.3.2
 requests==2.32.3
+drf-spectacular==0.27.2
+rpds-py==0.18.1
+inflection==0.5.1
+attrs==23.2.0
+jsonschema-specifications==2023.12.1
+referencing==0.35.1
+jsonschema==4.22.0
+uritemplate==4.1.1
+PyYAML==6.0.1
